# hexreader

./: Cargo.toml  README.md
src/: main.rs
test/: lorem-ipsum.txt
